--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "love",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://satyekuma.github.io/love",
+  "homepage": "https://satyekuma.github.io/test",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
